--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,12 +45,8 @@ jobs:
 
                nvm instal 14
                npm install -g pm2
-               cd ~/CICD
+               cd ~/CICD-YOUTUBE
                git pull origin main
                npm install
                npm run build
                pm2 restart api
-            
-
-
-
