--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
 
                nvm instal 14
                npm install -g pm2
-               cd ~/CICD-YOUTUBE
+               cd ~/cicd
                git pull origin main
                npm install
                npm run build
