--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,7 @@ jobs:
 
               #  nvm instal 14
               #  npm install -g pm2
+              git clone git@github.com:hoangxuantinh/cicd.git
                cd ~/cicd
                git pull origin master
               #  npm install
