--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,9 +45,8 @@ jobs:
 
               #  nvm instal 14
               #  npm install -g pm2
-              git clone git@github.com:hoangxuantinh/cicd.git
-               cd ~/cicd
+               cd cicd
                git pull origin master
-              #  npm install
-              #  npm run build
-              #  pm2 restart api
+                npm install
+                npm run build
+                pm2 restart api
