--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
 
               #  nvm instal 14
               #  npm install -g pm2
-               cd cicd-youtube
+               cd ~/cicd
                git pull origin master
                 npm install
                 npm run build
