--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,10 +40,9 @@ jobs:
           key:  ${{ secrets.KEY }}
           port:  ${{ secrets.PORT }}
           script: |
-              curl -o-   https://raw.githubusercontent.com/creationix/nvm/v0.33.8/install.sh    | bash
-              . ~/.nvm/nvm.sh
+              curl -o-   https://raw.githubusercontent.com/creationix/nvm/v0.33.8/install.sh | bash ~/.nvm/nvm.sh
 
-              nvm instal 14
+              nvm install 14
               npm install -g pm2
                cd ~/cicd
                git pull origin master
