--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,4 +49,4 @@ jobs:
               git pull origin master
               npm install
               npm run build
-              pm2 start app.js
+              pm2 start app.js -f
